spring-app/simple_spring_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  labels:
    app: spring-app
spec:
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
      annotations:                  
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"   
        prometheus.io/path: "/actuator/prometheus" 
    spec:
      containers:
        - name: spring-app
          image: nazmul4532brainstation/spring-boot-demo:latest
          ports:
            - containerPort: 8080
          volumeMounts: 
            - mountPath: /data  
              name: spring-app-storage  
      volumes:  
        - name: spring-app-storage
          persistentVolumeClaim:
            claimName: spring-app-pvc 
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  labels:
    app: spring-app
  annotations:                    
    prometheus.io/discover: "true" 
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"   
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spring-app
